--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" href="./images/icon.png">
     <title>AirBnB Clone</title>
 </head>
+
 <body>
     
         <header>
@@ -21,17 +22,17 @@
                     <h4>Carlifornia, Arizona</h4>
                     <ul class="popover">
                         <li>
-                            <h2>Nad</h2>
+                            <h2>New York</h2>
                             <p>Tree</p>
                             <p>Try</p>
                         </li>
                         <li>
-                            <h2>Nad</h2>
+                            <h2>Atlanta</h2>
                             <p>Tree</p>
                             <p>Try</p>
                         </li>
                         <li>
-                            <h2>Nad</h2>
+                            <h2>New York</h2>
                             <p>Tree</p>
                             <p>Try</p>
                         </li>
@@ -42,17 +43,17 @@
                     <h4>Internet Access</h4>
                     <ul class="popover">
                     <li>
-                        <h2>Nad</h2>
+                        <h2>New York</h2>
                         <p>Tree</p>
                         <p>Try</p>
                     </li>
                     <li>
-                        <h2>Nad</h3>
+                        <h2>New York</h2>
                         <p>Tree</p>
                         <p>Try</p>
                     </li>
                     <li>
-                        <h2>Nad</h2>
+                        <h2>New York</h2>
                         <p>Tree</p>
                         <p>Try</p>
                     </li>
