--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -96,11 +96,11 @@
                               <h2><b>2 Reviews</b></h2>
                               <ul>
                                     <li>
-                                          <h3>From Avec, 27th August 2022</h3>
+                                          <h3>From Cruz-Med, 27th August 2022</h3>
                                           <p>It's a great place for family vacations and friendly gatherings.</p>
                                     </li>
                                     <li>
-                                        <h3>From Avec, 27th August 2022</h3>
+                                        <h3>From Cruz-Med, 27th August 2022</h3>
                                         <p>It's a great place for family vacations and friendly gatherings.</p>
                                     </li>
                               </ul>
@@ -136,11 +136,11 @@
                               <h2><b>2 Reviews</b></h2>
                               <ul>
                                     <li>
-                                        <h3>From Avec, 27th August 2022</h3>
+                                        <h3>From Cruz-Med, 27th August 2022</h3>
                                         <p>It's a great place for family vacations and friendly gatherings.</p>
                                     </li>
                                     <li>
-                                        <h3>From Avec, 27th August 2022</h3>
+                                        <h3>From Cruz-Med, 27th August 2022</h3>
                                         <p>It's a great place for family vacations and friendly gatherings.</p>
                                     </li>
                               </ul>
@@ -149,7 +149,7 @@
 
                   <article>
                         <h2>A suite</h2>
-                        <div class="price_by_night">$180</div>
+                        <div class="price_by_night">$200</div>
                         <div class="information">
                               <div class="max_guest">10 Guest</div>
                               <div class="number_rooms">4 Bedrooms</div>
@@ -176,11 +176,11 @@
                               <h2><b>2 Reviews</b></h2>
                               <ul>
                                     <li>
-                                        <h3>From Avec, 27th August 2022</h3>
+                                        <h3>From Cruz-Med, 27th August 2022</h3>
                                         <p>It's a great place for family vacations and friendly gatherings.</p>
                                     </li>
                                     <li>
-                                        <h3>From Avec, 27th August 2022</h3>
+                                        <h3>From Cruz-Med, 27th August 2022</h3>
                                         <p>It's a great place for family vacations and friendly gatherings.</p>
                                     </li>
                               </ul>
